--- a/package.json
+++ b/package.json
@@ -2,8 +2,24 @@
   "name": "kanyebot",
   "version": "1.0.0",
   "description": "Discord bot to interface with kanye.rest",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/cameron-russell/kanyebot.git",
   "author": "Cameron Russell <32221303+cameron-russell@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "tsc": "tsc",
+    "start": "tsc && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "discord.js": "^12.5.1"
+  }
 }
