--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,macos,git,visualstudiocode
 
 .env
+Dockerfile
+build-docker-image.sh
