--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Cameron Russell <32221303+cameron-russell@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc",
     "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,11 +16,11 @@
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "typescript": "^4.1.3"
+    "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "typescript": "^4.1.3"
   }
 }
