--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Cameron Russell <32221303+cameron-russell@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
+    "tsc-clean": "rm -rf dist/ && tsc",
     "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
